# marsrover

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: cargo-fmt.yml  release-please.yml
.reuse/: dep5
src/: config.rs  context.rs  events.rs  main.rs  scores.rs
src/world/: alien.rs  background.rs  buggy.rs  bullet.rs  crater.rs  ditch.rs  mod.rs  monster.rs  rover.rs
